syntax="proto2";

package service;
option java_package = "com.github.raftimpl.raft.example.server.service";
option java_outer_classname = "ExampleProto";

message SetRequest {
    optional string key = 1;
    optional string value = 2;
    optional string column_family = 3;
}

message SetResponse {
    optional bool success = 1;
}

message GetRequest {
    optional string key = 1;
    optional string column_family = 2;
    
}

message GetResponse {
    optional string value = 1;
}
